--- a/coder-swag/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/coder-swag/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -80,11 +81,102 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="M6I-C5-QVe"/>
                     <connections>
                         <outlet property="categoryTable" destination="hFe-Zf-sGv" id="LvF-ec-SmS"/>
+                        <segue destination="xym-FA-Bae" kind="show" id="72H-ta-uSH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="901.60000000000002" y="-564.46776611694156"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Zli-Ro-nre">
+            <objects>
+                <viewController id="xym-FA-Bae" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nyA-3n-pnl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Products" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bAG-xj-cT3">
+                                <rect key="frame" x="8" y="25" width="162" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="162" id="mkA-2d-r8a"/>
+                                    <constraint firstAttribute="height" constant="28" id="sEg-AF-VyM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3rc-8o-reD">
+                                <rect key="frame" x="0.0" y="69" width="375" height="534"/>
+                                <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="efM-4P-AFz">
+                                    <size key="itemSize" width="168" height="236"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Ji2-zB-8b7" customClass="ProductCell" customModule="coder_swag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="168" height="236"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="168" height="236"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="O2Y-r9-TVA">
+                                                    <rect key="frame" x="0.0" y="0.0" width="168" height="168"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="168" id="1Hg-TP-6jL"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Devslopes Logo Graphic T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VWO-T6-7Z2">
+                                                    <rect key="frame" x="8" y="170" width="152" height="38"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
+                                                    <color key="textColor" red="0.43049555258464783" green="0.43200872027604931" blue="0.43654822335025378" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5e-IQ-MdT">
+                                                    <rect key="frame" x="8" y="209" width="152" height="17"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
+                                                    <color key="textColor" red="0.38081418848838344" green="0.37897450641839125" blue="0.38265387055837563" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="j5e-IQ-MdT" firstAttribute="top" secondItem="VWO-T6-7Z2" secondAttribute="bottom" constant="1" id="DCN-OQ-E6X"/>
+                                            <constraint firstItem="O2Y-r9-TVA" firstAttribute="top" secondItem="Ji2-zB-8b7" secondAttribute="top" id="Ujb-YY-d5X"/>
+                                            <constraint firstItem="j5e-IQ-MdT" firstAttribute="leading" secondItem="Ji2-zB-8b7" secondAttribute="leadingMargin" id="aSE-i4-F6C"/>
+                                            <constraint firstItem="O2Y-r9-TVA" firstAttribute="leading" secondItem="Ji2-zB-8b7" secondAttribute="leading" id="cHT-y0-9EJ"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="VWO-T6-7Z2" secondAttribute="trailing" id="gaQ-bi-NbJ"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="j5e-IQ-MdT" secondAttribute="trailing" id="h57-kL-Af8"/>
+                                            <constraint firstItem="VWO-T6-7Z2" firstAttribute="leading" secondItem="Ji2-zB-8b7" secondAttribute="leadingMargin" id="pls-zM-3Sx"/>
+                                            <constraint firstAttribute="trailing" secondItem="O2Y-r9-TVA" secondAttribute="trailing" id="xSS-9Y-EEn"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="productImage" destination="O2Y-r9-TVA" id="JKP-Hn-120"/>
+                                            <outlet property="productPrice" destination="j5e-IQ-MdT" id="Knl-t6-3Gy"/>
+                                            <outlet property="productTitle" destination="VWO-T6-7Z2" id="O8T-R2-ary"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="bAG-xj-cT3" firstAttribute="leading" secondItem="Lwq-ki-H1r" secondAttribute="leading" constant="8" id="8ra-lC-zib"/>
+                            <constraint firstItem="Lwq-ki-H1r" firstAttribute="bottom" secondItem="3rc-8o-reD" secondAttribute="bottom" id="DDt-Dd-umh"/>
+                            <constraint firstItem="Lwq-ki-H1r" firstAttribute="trailing" secondItem="3rc-8o-reD" secondAttribute="trailing" id="XIa-c2-9VQ"/>
+                            <constraint firstItem="3rc-8o-reD" firstAttribute="leading" secondItem="Lwq-ki-H1r" secondAttribute="leading" id="gG4-Ys-61U"/>
+                            <constraint firstItem="3rc-8o-reD" firstAttribute="top" secondItem="bAG-xj-cT3" secondAttribute="bottom" constant="16" id="ivn-DP-GD2"/>
+                            <constraint firstItem="bAG-xj-cT3" firstAttribute="top" secondItem="Lwq-ki-H1r" secondAttribute="top" constant="25" id="sYX-6T-ZPP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Lwq-ki-H1r"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6fo-ft-ar8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1605.5999999999999" y="-564.46776611694156"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kIp-Ol-VA3">
@@ -94,6 +186,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="2jG-lf-S2m">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="barTintColor" red="0.3411764705882353" green="0.15294117647058825" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -111,5 +204,6 @@
     </scenes>
     <resources>
         <image name="digital" width="1024" height="703"/>
+        <image name="shirt01" width="500" height="500"/>
     </resources>
 </document>
