--- a/coder-swag/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/coder-swag/Base.lproj/Main.storyboard
@@ -81,17 +81,17 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="M6I-C5-QVe"/>
                     <connections>
                         <outlet property="categoryTable" destination="hFe-Zf-sGv" id="LvF-ec-SmS"/>
-                        <segue destination="xym-FA-Bae" kind="show" id="72H-ta-uSH"/>
+                        <segue destination="xym-FA-Bae" kind="show" identifier="ProductsVC" id="72H-ta-uSH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="901.60000000000002" y="-564.46776611694156"/>
         </scene>
-        <!--View Controller-->
+        <!--ProductsVC-->
         <scene sceneID="Zli-Ro-nre">
             <objects>
-                <viewController id="xym-FA-Bae" sceneMemberID="viewController">
+                <viewController id="xym-FA-Bae" customClass="ProductsVC" customModule="coder_swag" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nyA-3n-pnl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -116,7 +116,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Ji2-zB-8b7" customClass="ProductCell" customModule="coder_swag" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="Ji2-zB-8b7" customClass="ProductCell" customModule="coder_swag" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="168" height="236"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -129,14 +129,14 @@
                                                         <constraint firstAttribute="height" constant="168" id="1Hg-TP-6jL"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Devslopes Logo Graphic T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VWO-T6-7Z2">
-                                                    <rect key="frame" x="8" y="170" width="152" height="38"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes Logo Graphic T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VWO-T6-7Z2">
+                                                    <rect key="frame" x="8" y="170" width="152" height="33"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
                                                     <color key="textColor" red="0.43049555258464783" green="0.43200872027604931" blue="0.43654822335025378" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5e-IQ-MdT">
-                                                    <rect key="frame" x="8" y="209" width="152" height="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5e-IQ-MdT">
+                                                    <rect key="frame" x="8" y="204" width="152" height="17"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
                                                     <color key="textColor" red="0.38081418848838344" green="0.37897450641839125" blue="0.38265387055837563" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
@@ -151,6 +151,7 @@
                                             <constraint firstAttribute="trailingMargin" secondItem="VWO-T6-7Z2" secondAttribute="trailing" id="gaQ-bi-NbJ"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="j5e-IQ-MdT" secondAttribute="trailing" id="h57-kL-Af8"/>
                                             <constraint firstItem="VWO-T6-7Z2" firstAttribute="leading" secondItem="Ji2-zB-8b7" secondAttribute="leadingMargin" id="pls-zM-3Sx"/>
+                                            <constraint firstItem="VWO-T6-7Z2" firstAttribute="top" secondItem="O2Y-r9-TVA" secondAttribute="bottom" constant="2" id="xLI-Kh-xgF"/>
                                             <constraint firstAttribute="trailing" secondItem="O2Y-r9-TVA" secondAttribute="trailing" id="xSS-9Y-EEn"/>
                                         </constraints>
                                         <connections>
@@ -173,6 +174,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Lwq-ki-H1r"/>
                     </view>
+                    <connections>
+                        <outlet property="productsCollection" destination="3rc-8o-reD" id="5KZ-NO-qsS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6fo-ft-ar8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
